gateway-api/routes/custom-element-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-chat-ess-gateway-route
  namespace: ess
  labels:
    application: gateway-api
    service: HTTPRoute
    route: chat-ess
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: chat-ess-https
      namespace: envoy-gateway
  hostnames:
    - "chat.ess.your.domain.tld"
  rules:
    - backendRefs:
        - name: ess-element-web
          port: 80
      sessionPersistence:
        sessionName: EssChatSession
        type: Cookie
        absoluteTimeout: 300s
        cookieConfig:
          lifetimeType: Permanent
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-admin-ess-gateway-route
  namespace: ess
  labels:
    application: gateway-api
    service: HTTPRoute
    route: admin-ess
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: admin-ess-https
      namespace: envoy-gateway
  hostnames:
    - "admin.ess.your.domain.tld"
  rules:
    - backendRefs:
        - name: ess-element-admin
          port: 80
      sessionPersistence:
        sessionName: EssAdminSession
        type: Cookie
        absoluteTimeout: 300s
        cookieConfig:
          lifetimeType: Permanent
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-account-ess-gateway-route
  namespace: ess
  labels:
    application: gateway-api
    service: HTTPRoute
    route: account-ess
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: account-ess-https
      namespace: envoy-gateway
  hostnames:
    - "account.ess.your.domain.tld"
  rules:
    - backendRefs:
        - name: ess-matrix-authentication-service
          port: 8080
      sessionPersistence:
        sessionName: EssAccountSession
        type: Cookie
        absoluteTimeout: 300s
        cookieConfig:
          lifetimeType: Permanent
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-account-mrtc-gateway-route
  namespace: ess
  labels:
    application: gateway-api
    service: HTTPRoute
    route: account-mrtc
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: mrtc-ess-https
      namespace: envoy-gateway
  hostnames:
    - "mrtc.ess.your.domain.tld"
  rules:
    - backendRefs:
      - name: ess-matrix-rtc-sfu
        port: 7880
      sessionPersistence:
        sessionName: EssRTCSession
        type: Cookie
        absoluteTimeout: 300s
        cookieConfig:
          lifetimeType: Permanent
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-account-matrix-gateway-route
  namespace: ess
  labels:
    application: gateway-api
    service: HTTPRoute
    route: account-matrix
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: matrix-ess-https
      namespace: envoy-gateway
  hostnames:
    - "matrix.ess.your.domain.tld"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /_matrix/client/api/v1/login
        - path:
            type: PathPrefix
            value: /_matrix/client/api/v1/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/api/v1/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/login
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/r0/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/login
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/logout
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/unstable/login
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/unstable/refresh
        - path:
            type: PathPrefix
            value: /_matrix/client/v3/unstable/logout
      backendRefs:
        - name: ess-matrix-authentication-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /_synapse
        - path:
            type: PathPrefix
            value: /_matrix
      backendRefs:
        - name: ess-synapse
          port: 8008
      sessionPersistence:
        sessionName: EssMatrixSession
        type: Cookie
        absoluteTimeout: 300s
        cookieConfig:
          lifetimeType: Permanent
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-well-known-gateway-route
  namespace: ess
  labels:
    application: gateway-api
    service: HTTPRoute
    route: well-known
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: well-known-https
      namespace: envoy-gateway
  hostnames:
    - "ess.your.domain.tld"
  rules:
    - backendRefs:
      - name: ess-well-known
        port: 8010
      sessionPersistence:
        sessionName: WellKnownSession
        type: Cookie
        absoluteTimeout: 300s
        cookieConfig:
          lifetimeType: Permanent
